{
    "name": "InputActions",
    "maps": [
        {
            "name": "MouseActions",
            "id": "b65c8288-0eeb-4ec3-8c92-825fbc747574",
            "actions": [
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "4a4d2b44-9f98-4d42-822c-5a05d379d23e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "de24ca85-6d9d-4eda-ba60-2566edd603fb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "6ae6f214-435c-4fa1-8fef-43786f14ae47",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "64121776-816e-4c3b-b414-60d92792c7f6",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "94de9ce8-1656-402e-954d-ba73a7099374",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "951da1ee-cd73-4b4c-b228-61a53e4ebe55",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}